--- a/.github/workflows/ml-pipeline.yml
+++ b/.github/workflows/ml-pipeline.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
+          cache: "pip" # Cache pip dependencies untuk speed up
 
       # Step 3: Install dependencies
       - name: 📦 Install Dependencies
@@ -35,13 +36,16 @@ jobs:
         run: |
           pytest tests/ -v --tb=short
 
-      # Step 5: Upload test results
+      # Step 5: Upload test results (menggunakan v4 yang terbaru)
       - name: 📊 Upload Test Results
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: test-results
-          path: pytest.xml
+          name: test-results-${{ github.run_id }}
+          path: |
+            tests/
+            *.log
+          retention-days: 7
 
   train-model:
     name: 🤖 Train Model
@@ -56,6 +60,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
+          cache: "pip"
 
       - name: 📦 Install Dependencies
         run: |
@@ -68,13 +73,14 @@ jobs:
           cd src
           python train.py
 
-      # Step: Upload model artifacts
+      # Step: Upload model artifacts (menggunakan v4)
       - name: 📤 Upload Model
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: trained-model
+          name: trained-model-${{ github.run_id }}
           path: models/
           retention-days: 30
+          compression-level: 6 # Kompresi untuk menghemat storage
 
   deploy:
     name: 🚀 Deploy
@@ -87,21 +93,47 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 📥 Download Model
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: trained-model
+          name: trained-model-${{ github.run_id }}
           path: models/
+
+      - name: 🔍 Verify Model Files
+        run: |
+          echo "📁 Downloaded model files:"
+          ls -la models/
+          if [ ! -f "models/iris_model.pkl" ]; then
+            echo "❌ Model file tidak ditemukan!"
+            exit 1
+          fi
+          echo "✅ Model file verified!"
 
       - name: 🚀 Deploy Model
         run: |
           echo "🎉 Model berhasil di-deploy!"
-          echo "📁 Model files:"
-          ls -la models/
+          echo "📊 Model info:"
+          file models/iris_model.pkl
+          echo "📏 Model size: $(du -h models/iris_model.pkl | cut -f1)"
           echo "✅ Deployment completed successfully!"
 
-      # Simulasi notifikasi (opsional)
+      # Simulasi notifikasi
       - name: 📢 Notify Success
         run: |
           echo "🔔 Deployment notification:"
           echo "✅ ML Model successfully deployed to production!"
           echo "📊 Timestamp: $(date)"
+          echo "🔗 Repository: ${{ github.repository }}"
+          echo "🏷️ Commit: ${{ github.sha }}"
+
+  # Job tambahan untuk cleanup artifacts lama (opsional)
+  cleanup:
+    name: 🧹 Cleanup
+    runs-on: ubuntu-latest
+    needs: [deploy]
+    if: always() && github.ref == 'refs/heads/main'
+
+    steps:
+      - name: 🧹 Cleanup Old Artifacts
+        run: |
+          echo "🧹 Cleanup process completed"
+          echo "ℹ️ Artifacts akan otomatis dihapus sesuai retention-days"
