--- a/.github/workflows/ml-pipeline.yml
+++ b/.github/workflows/ml-pipeline.yml
@@ -1,56 +1,15 @@
 name: ML CI/CD Pipeline
 
-# Kapan workflow ini akan jalan
 on:
   push:
     branches: [main, develop]
   pull_request:
     branches: [main]
 
-# Jobs yang akan dijalankan
 jobs:
   test:
     name: 🧪 Testing
     runs-on: ubuntu-latest
-
-    steps:
-      # Step 1: Checkout kode
-      - name: 📥 Checkout Code
-        uses: actions/checkout@v4
-
-      # Step 2: Setup Python
-      - name: 🐍 Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.9"
-          cache: "pip" # Cache pip dependencies untuk speed up
-
-      # Step 3: Install dependencies
-      - name: 📦 Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      # Step 4: Run tests
-      - name: 🧪 Run Tests
-        run: |
-          pytest tests/ -v --tb=short
-
-      # Step 5: Upload test results (menggunakan v4 yang terbaru)
-      - name: 📊 Upload Test Results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-results-${{ github.run_id }}
-          path: |
-            tests/
-            *.log
-          retention-days: 7
-
-  train-model:
-    name: 🤖 Train Model
-    runs-on: ubuntu-latest
-    needs: test # Hanya jalan jika test berhasil
 
     steps:
       - name: 📥 Checkout Code
@@ -67,26 +26,71 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Step: Train model
-      - name: 🚀 Train Model
+      - name: 🔧 Setup Python Path
         run: |
+          echo "PYTHONPATH=$GITHUB_WORKSPACE/src:$PYTHONPATH" >> $GITHUB_ENV
+          echo "Current directory: $(pwd)"
+          echo "Directory contents:"
+          ls -la
+          echo "Src directory contents:"
+          ls -la src/
+
+      - name: 🧪 Run Tests
+        run: |
+          # Set PYTHONPATH dan jalankan dari root directory
+          export PYTHONPATH="${GITHUB_WORKSPACE}/src:${PYTHONPATH}"
+          pytest tests/ -v --tb=short
+
+      - name: 📊 Upload Test Results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results-${{ github.run_id }}
+          path: |
+            tests/
+            *.log
+          retention-days: 7
+
+  train-model:
+    name: 🤖 Train Model
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v4
+
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+          cache: "pip"
+
+      - name: 📦 Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: 🤖 Train Model
+        run: |
+          echo "🚀 Starting model training..."
           cd src
           python train.py
+          echo "✅ Model training completed!"
+          ls -la ../models/
 
-      # Step: Upload model artifacts (menggunakan v4)
       - name: 📤 Upload Model
         uses: actions/upload-artifact@v4
         with:
           name: trained-model-${{ github.run_id }}
           path: models/
           retention-days: 30
-          compression-level: 6 # Kompresi untuk menghemat storage
 
   deploy:
     name: 🚀 Deploy
     runs-on: ubuntu-latest
     needs: [test, train-model]
-    if: github.ref == 'refs/heads/main' # Hanya deploy dari branch main
+    if: github.ref == 'refs/heads/main'
 
     steps:
       - name: 📥 Checkout Code
@@ -98,42 +102,16 @@ jobs:
           name: trained-model-${{ github.run_id }}
           path: models/
 
-      - name: 🔍 Verify Model Files
-        run: |
-          echo "📁 Downloaded model files:"
-          ls -la models/
-          if [ ! -f "models/iris_model.pkl" ]; then
-            echo "❌ Model file tidak ditemukan!"
-            exit 1
-          fi
-          echo "✅ Model file verified!"
-
       - name: 🚀 Deploy Model
         run: |
           echo "🎉 Model berhasil di-deploy!"
-          echo "📊 Model info:"
-          file models/iris_model.pkl
-          echo "📏 Model size: $(du -h models/iris_model.pkl | cut -f1)"
+          echo "📁 Model files:"
+          ls -la models/
+          if [ -f "models/iris_model.pkl" ]; then
+            echo "✅ Model file found and ready for deployment!"
+            echo "📏 Model size: $(du -h models/iris_model.pkl | cut -f1)"
+          else
+            echo "❌ Model file not found!"
+            exit 1
+          fi
           echo "✅ Deployment completed successfully!"
-
-      # Simulasi notifikasi
-      - name: 📢 Notify Success
-        run: |
-          echo "🔔 Deployment notification:"
-          echo "✅ ML Model successfully deployed to production!"
-          echo "📊 Timestamp: $(date)"
-          echo "🔗 Repository: ${{ github.repository }}"
-          echo "🏷️ Commit: ${{ github.sha }}"
-
-  # Job tambahan untuk cleanup artifacts lama (opsional)
-  cleanup:
-    name: 🧹 Cleanup
-    runs-on: ubuntu-latest
-    needs: [deploy]
-    if: always() && github.ref == 'refs/heads/main'
-
-    steps:
-      - name: 🧹 Cleanup Old Artifacts
-        run: |
-          echo "🧹 Cleanup process completed"
-          echo "ℹ️ Artifacts akan otomatis dihapus sesuai retention-days"
