--- a/.github/workflows/ml-pipeline.yml
+++ b/.github/workflows/ml-pipeline.yml
@@ -51,40 +51,53 @@ jobs:
             *.log
           retention-days: 7
 
-  train-model:
+    train-model:
     name: 🤖 Train Model
     runs-on: ubuntu-latest
     needs: test
-
+    
     steps:
-      - name: 📥 Checkout Code
-        uses: actions/checkout@v4
-
-      - name: 🐍 Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.9"
-          cache: "pip"
-
-      - name: 📦 Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: 🤖 Train Model
-        run: |
-          echo "🚀 Starting model training..."
-          cd src
-          python train.py
-          echo "✅ Model training completed!"
-          ls -la ../models/
-
-      - name: 📤 Upload Model
-        uses: actions/upload-artifact@v4
-        with:
-          name: trained-model-${{ github.run_id }}
-          path: models/
-          retention-days: 30
+    - name: 📥 Checkout Code
+      uses: actions/checkout@v4
+    
+    - name: 🐍 Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+        cache: 'pip'
+    
+    - name: 📦 Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    
+    - name: 🔍 Debug Directory Structure
+      run: |
+        echo "📁 Current directory: $(pwd)"
+        echo "📁 Directory structure:"
+        find . -type f -name "*.py" -o -name "*.csv" -o -name "*.yml" | head -20
+        echo "📁 Data directory:"
+        ls -la data/ || echo "Data directory not found"
+        echo "📁 Src directory:"
+        ls -la src/ || echo "Src directory not found"
+    
+    - name: 🤖 Train Model
+      run: |
+        echo "🚀 Starting model training..."
+        
+        # Jalankan dari root directory, bukan dari src/
+        python src/train.py
+        
+        echo "✅ Model training completed!"
+        echo "📁 Models directory:"
+        ls -la models/ || echo "Models directory not found"
+    
+    - name: 📤 Upload Model
+      uses: actions/upload-artifact@v4
+      with:
+        name: trained-model-${{ github.run_id }}
+        path: models/
+        retention-days: 30
 
   deploy:
     name: 🚀 Deploy
